--- a/package.json
+++ b/package.json
@@ -33,8 +33,11 @@
     "class-validator": "^0.14.3",
     "joi": "^18.0.2",
     "mongoose": "^9.0.2",
+    "nestjs-pino": "^4.5.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "pino": "^10.1.0",
+    "pino-pretty": "^13.1.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1"
